<resources>
    <string name="app_name">Miracle Note</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_welcome">Welcome to Miracle Note!</string>
    <string name="login_more_platform">你还可以通过以下平台登录</string>
    <string name="login_login">请登录</string>
    <string name="login_hint_username">用户名</string>
    <string name="login_hint_password">密码</string>
    <string name="signin_username">用户名</string>
    <string name="signin_password">密码</string>
    <string name="signin_password_confirm">确认密码</string>
    <string name="signin_email">邮箱</string>
    <string name="signin_phone">手机</string>
    <string name="signin_identify">验证码</string>
    <string name="signin_send_identify">发送验证码</string>
    <string name="alarm_hint">添加提醒</string>
    <string name="note_date_create">创建于:12月5日 13:51</string>
    <string name="note_date_update">更新于:12月5日 13:54</string>
    <string name="note_hint_link">附件</string>
    <string name="menu_drawer_options">选项</string>
    <string name="open_drewer">打开侧滑界面</string>
    <string name="close_drawer">关闭侧滑界面</string>
    <string name="submenu_title_notebook">我的笔记本</string>
</resources>
