<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:transitionName="view_shelter"
            app:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:title="注册" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/signin_username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:inputType="textPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/signin_password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:inputType="textPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/signin_password_confirm" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:inputType="textEmailAddress"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/signin_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:inputType="phone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/signin_phone" />
        </android.support.design.widget.TextInputLayout>

<!--        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_identify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:inputType="number"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/signin_identify" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_send_identify"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signin_send_identify"
            style="@style/ButtonTextStyle"
            />-->

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:transitionName="sign_in"
        android:id="@+id/fab_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_signin"
        android:layout_alignParentRight="true"
        android:layout_margin="24dp"
        android:src="@drawable/ic_action_ok" />
</RelativeLayout>